DATE        AUTHOR      CHANGE
---------- -----------  -------------------------------------------------------
NOTE: Odd numbered minor versions are development series (ex: 0.1, 0.9, etc)

2006-05-06 allenb       Added ability to set options in OptionRepository.
                        Added saveOptionFile to OptionRepository.
                        Refactored OptionRepository to hold onto Doc node.
                        cppdom::Error now derived from std::exception
                        VERSION: 0.7.0
                        
[Version 0.6.0 released - 6.1.2005]============================================
2005-02-06 allenb       Added hasOption() method to OptionRepository
                        VERSION: 0.5.6
2005-02-04 allenb       Added ability to get children by path.
                        Added extension to assist with using xml files
                        as configuration files.  See: ext/OptionRepository.h
                        VERSION: 0.5.5
2005-02-03 allenb       Added tests for Node interface.
                        Added Node::hasChild() method.
                        VERSION: 0.5.4
2004-04-14 allenb       Added ability to make distribution as part of build.
                        VERSION: 0.5.3
2004-04-14 allenb       Migrated build system to use AutoDist.
                        VERSION: 0.5.2
2004-04-13 allenb       Refactoring build system to use scons-addons
                        VERSION: 0.5.1
2004-04-12 allenb       Moving into active development version again
                        NEW VERSION: 0.5.0

[Version 0.4.0 released - 4.6.2004]============================================
2004-02-29 allenb       Moved the node type enum into Node as Node::Type. 
                        This breaks all old code that used the type interface.
                        To help avoid future breakage in the future, added
                        an interface to Node to query for node type. (isLeaf(),